Switch off scrollbars in MOBILE_UI mode

BUG: 263792